2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_dump:
	* dae/op_start: echo errors to stderr
 
	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start.cpp: use fork/exec to spawn children

2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* gui/Makefile.in:
	* gui/oprof_start_config.h: 
	* gui/oprof_start_config.cpp: 
	* gui/oprof_start_util.h: 
	* gui/oprof_start_util.cpp: 
	* gui/oprof_start.h: 
	* gui/oprof_start.cpp: new file for util functions
 
2001-09-23  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_util.c:
	* dae/opd_util.h:
	* dae/oprofiled.c: 
	* pp/oprofpp.c: 
	* pp/opf_filter.cpp: 
	* configure.in: enable __builtin_expect, fix popt problem

	* pp/oprof_convert.c: small fixes
 
	* op_events.c: shorten event descriptions for GUI 

	* gui/*: many more updates
 
	* pp/Makefile.in: fix
 
2001-09-21  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: removed over-verbose line

	* configure.in:
	* oprofile.h:
	* oprofile.c: add likely/unlikely, take note lock on dump
 
2001-09-21  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h: move declaration of counter_array_t to
	* pp/oprofpp.h: here
	* pp/oprofpp.c: define and use counter_array_t + minor cleanup
	* pp/opf_filter.cpp: remove definition of counter_array_t

2001-09-21  Philippe Elie  <ph_e@club-internet.fr>

	* Makefile.in: remove aclocal.m4 in distclean
	* pp/Makefile.in: use $(CXX) and $(CXXFLAGS)

	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/oprofpp.c:
	* pp/oprofpp.h: cleanup

2001-09-20  Philippe Elie  <ph_e@club-internet.fr>

	* Makefile.in: minor change in module building
	* pp/Makefile.in: link oprofpp with opf_filter
	* pp/op_to_source: avoid pipe from oprofpp to opf_filter
	* pp/opf_filter.h: remove a few member function
	* pp/opf_container.cpp: ditto + minor cleanup
	* pp/opf_filter.cpp: oprofpp is no longer piped to opf_filter
	  but linked with it. Many change, needs additional cleanup