@@ -1,5 +1,12 @@
 2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
 
+	* gui/oprof_start.cpp: use std::find_if
+ 
+	* gui/oprof_start_config.cpp:
+	* gui/oprof_start_util.cpp: minor tidies
+ 
+2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/op_dump:
 	* dae/op_start: echo errors to stderr
  
